<resources>
    <string name="app_name">CostCalendar</string>
    <string name="btn_open_day">Day\'s costs</string>
    <string name="btn_open_reports">Reports</string>
    <string name="btn_open_dict">Dictionaries</string>
    <string name="title_activity_days_costs">DaysCosts</string>
    <string name="new_cost">New Cost</string>
    <string name="edit_cost">Edit Cost</string>
    <string name="delete_cost">Delete Cost</string>
    <string name="init_type1">Grocery and household</string>
    <string name="init_type2">Entertainments</string>
    <string name="init_subtype1_1">Grocery</string>
    <string name="init_subtype1_2">Household</string>
    <string name="init_subtype1_3">Alcohol</string>
    <string name="init_subtype2_1">Cinema</string>
    <string name="init_subtype2_2">Restaurant</string>
    <string name="init_subtype2_3">Exhibition</string>
    <string name="title_activity_add_cost">add_cost</string>
    <string name="add_cost_type">Type</string>
    <string name="add_cost_sybtype">Sub Type</string>
    <string name="add_cost_item">Item</string>
    <string name="add_cost_sum">Cost value</string>
    <string name="add_cost_comment">Comment</string>
    <string name="add_cost_btn_new">Add new</string>
    <string name="add_cost_btn_save">Save</string>
    <string name="add_cost_btn_save_exit">Save and exit</string>
    <string name="add_cost_btn_exit">Exit</string>
    <string name="add_cost">Add cost</string>
    <string name="cost_added">Cost added</string>
    <string name="selected_count">Selected: </string>
    <string name="dialog_delete_cost">Delete selected costs?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="title_add_type">Create new type</string>
    <string name="dialog_new_subtype">Create new subtype for</string>
    <string name="dialog_new_item">Create new item for</string>
    <string name="dialog_create">Create</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="optional_subtype">Choose subtype (optional)</string>
    <string name="optional_item">Choose item (optional)</string>
    <string name="select_item_notification">You need select subtype for item</string>
    <string name="btn_add_new">Add new</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="title_edit_type">Edit type</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="dict_confirm01">Are you sure you wanna delete</string>
    <string name="dict_confirm02">There is exist data linked with</string>
    <string name="dict_confirm03">Costs records:</string>
    <string name="dict_confirm04">Subtypes records:</string>
    <string name="dict_confirm05">Items records:</string>
    <string name="dict_confirm06">They also be deleted.</string>
    <string name="btn_sure_delete">Delete anyway</string>
    <string name="title_types">Types</string>
    <string name="title_subtypes">Sub types</string>
    <string name="title_items">Items</string>
    <string name="title_dict">Dictionaries</string>
    <string name="title_edit_subtype">Edit subtype</string>
    <string name="title_add_subtype">Add subtype</string>
    <string name="title_edit_item">Edit item</string>
    <string name="title_add_item">Add item</string>
    <string name="msg_subtype_empty">You need choose subtype</string>
    <string name="title_reports">Reports</string>
    <string name="title_tables">Tables</string>
    <string name="title_charts">Charts</string>
    <string name="title_compare_charts">Compare charts</string>
    <string name="btn_open_sms">SMS Parser</string>
    <string name="title_sms">SMS Parser</string>
    <string name="btn_date_from">Date From:</string>
    <string name="btn_date_to">Date To:</string>
    <string name="txt_phone">Enter phone number</string>
    <string name="txt_before">Enter phrase before cost value</string>
    <string name="txt_after">Enter phrase after cost value</string>
    <string name="txt_status_saved">Saved</string>
    <string name="txt_status_unsaved">Not Saved</string>
    <string name="title_sms_templates">Templates for parsing</string>
    <string name="btn_start_parsing">Start sms parsing</string>
    <string name="btn_add_temp">Create empty template</string>
    <string name="title_sms_complite">Parsing complited!</string>
    <string name="txt_total_sms">Total sms parse:</string>
    <string name="txt_success_sms">Success sms parse:</string>
</resources>
