<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    >

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="@string/title_sms" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18dp"
            android:text="@string/btn_date_from" />

        <TextView
            android:id="@+id/txt_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:clickable="true"
            android:focusable="false"
            android:onClick="OnClickFrom"
            android:text="@string/btn_date_from"
            android:textSize="18dp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="OnClickFrom"
            app:srcCompat="@android:drawable/ic_menu_today" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18dp"
            android:text="@string/btn_date_to" />

        <TextView
            android:id="@+id/txt_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:text="@string/btn_date_to"
            android:textSize="18dp"
            android:clickable="true"
            android:focusable="false"
            android:onClick="OnClickTo"/>

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="OnClickTo"
            app:srcCompat="@android:drawable/ic_menu_today" />
    </LinearLayout>

    <Button
        android:id="@+id/sms_prase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="OnClickSmsParse"
        android:text="@string/btn_start_parsing" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/title_sms_templates" />

    <Button
        android:id="@+id/add_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnClickAddBlankTemp"
        android:layout_marginStart="10dp"
        android:text="@string/btn_add_temp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>


</LinearLayout>