<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="342dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_id"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_open_reports"
        app:layout_constraintStart_toStartOf="@+id/button_id2"
        app:layout_constraintTop_toBottomOf="@+id/button_id2"
        android:onClick="OnClickReports"/>

    <Button
        android:id="@+id/button_id3"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_open_dict"
        android:onClick="OnClickDict"
        app:layout_constraintStart_toStartOf="@+id/button_id2"
        app:layout_constraintTop_toBottomOf="@+id/button_id" />

    <Button
        android:id="@+id/button_id2"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_open_day"
        app:layout_constraintStart_toStartOf="@+id/calendarView"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        android:onClick="OnClickDaysCosts"/>

    <Button
        android:id="@+id/button_id4"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_open_sms"
        android:onClick="OnClickSms"
        app:layout_constraintStart_toStartOf="@+id/button_id3"
        app:layout_constraintTop_toBottomOf="@+id/button_id3" />


</android.support.constraint.ConstraintLayout>