<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DaysCosts">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginStart="@dimen/margin_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/title_reports"/>

        <ScrollView
            android:id="@+id/scrollView_rep"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:id="@+id/linear_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/title_tables"/>

                <Button
                    android:id="@+id/button12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Button" />

                <LinearLayout
                    android:id="@+id/linear_tables"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>

                <TextView
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/title_charts"/>

                <Button
                    android:id="@+id/button13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Button" />

                <LinearLayout
                    android:id="@+id/linear_charts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>

                <TextView
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/title_compare_charts"/>

                <Button
                    android:id="@+id/button14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Button" />

                <LinearLayout
                    android:id="@+id/linear_compare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>